Interval selection size fix
The toggle buttons had too much padding

--- a/solfege.css
+++ b/solfege.css
@@ -29,3 +29,6 @@
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+#intervalToggleButton {
+	padding: 2px;
+}
